# xopera-api

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  generate.sh  openapi-python-config.yml  openapi-spec.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.sh
.github/workflows/: ci_cd.yaml
src/opera/api/: cli.py
src/opera/api/controllers/: background_invocation.py  default.py  invocation_service.py  utils.py
test/: Dockerfile-control  docker-compose.yml
test/scaling/: README.md  service.yml
test/scaling/playbooks/: create.yaml  scale_down.yaml
tests/docker/: docker-compose.yml  runme.sh
tests/integration/docker/: docker-compose.yml  runme.sh
tests/integration/hello-world/: runme.sh
tests/integration/scaling/: runme.sh
tests/integration/source/: runme.sh
