[metadata]
name = opera-api
url = https://github.com/xlab-si/xopera-api
project_urls =
    Source Code = https://github.com/xlab-si/xopera-api
    Bug Tracker = https://github.com/xlab-si/xopera-api/issues
author = XLAB d.o.o.
author_email = pypi@xlab.si
license_file = LICENSE
description = Lightweight TOSCA orchestrator lightweight API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orchestration
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir =
  = src
packages = find_namespace:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  opera == 0.6.6
  connexion >= 2.7.0
  python_dateutil >= 2.8.1
  tornado >= 6.0.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  opera-api = opera.api.cli:main
