[metadata]
name = opera-api
url = https://github.com/xlab-si/xopera-api
project_urls =
    Documentation = https://xlab-si.github.io/xopera-docs/
    Source Code = https://github.com/xlab-si/xopera-api
    Bug Tracker = https://github.com/xlab-si/xopera-api/issues
    Discussions = https://github.com/xlab-si/xopera-api/discussions
    Releases = https://github.com/xlab-si/xopera-api/releases
    Pre-releases = https://test.pypi.org/project/opera-api/#history
    Examples = https://github.com/xlab-si/xopera-examples
    CI = https://github.com/xlab-si/xopera-api/actions/
author = XLAB d.o.o.
author_email = pypi@xlab.si
license_file = LICENSE
description = Lightweight API for xOpera orchestrator - single user, single project, single deployment
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orchestration
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
  = src
packages = find_namespace:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools-scm >= 6.4.2
install_requires =
  opera == 0.6.9
  connexion[swagger-ui] == 2.13.0
  python_dateutil == 2.8.2
  tornado == 6.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  opera-api = opera.api.cli:main
